--- a/notebooks/phoneme_features.ipynb
+++ b/notebooks/phoneme_features.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
     "    'K': 'plosive',\n",
     "    'G': 'plosive',\n",
     "    'CH': 'affricate',\n",
-    "    'JH': 'affricate',\n",
+    "    'JH': 'affricate',\"\"\n",
     "    'F': 'fricative',\n",
     "    'V': 'fricative',\n",
     "    'S': 'fricative',\n",
@@ -136,17 +136,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1, 1, 6, 0, 0, 0], [1, 8, 6, 0, 0, 0]]\n",
-      "[[1, 0, 0, 2, 3, 2], [1, 0, 0, 1, 1, 1]]\n",
-      "[1, 0, 0, 3, 3, 1]\n",
-      "[0, 0, 0, 0, 0, 0]\n"
+      "[[2, 1, 6, 0, 0, 0], [2, 8, 6, 0, 0, 0]]\n",
+      "[[2, 0, 0, 2, 3, 2], [2, 0, 0, 1, 1, 1]]\n",
+      "[2, 0, 0, 3, 3, 1]\n",
+      "[0, 0, 0, 0, 0, 0]\n",
+      "[1, 4, 1, 0, 0, 0]\n"
      ]
     }
    ],
@@ -192,11 +193,11 @@
     "\n",
     "    # Voicing (1 = voiced, 0 = voiceless)\n",
     "    voiced = {\n",
-    "        \"P\": 0, \"B\": 1, \"T\": 0, \"D\": 1, \"K\": 0, \"G\": 1, \"F\": 0, \"V\": 1,\n",
-    "        \"TH\": 0, \"DH\": 1, \"S\": 0, \"Z\": 1, \"SH\": 0, \"ZH\": 1, \"CH\": 0, \"JH\": 1,\n",
-    "        \"M\": 1, \"N\": 1, \"NG\": 1, \"L\": 1, \"R\": 1, \"W\": 1, \"Y\": 1, \"HH\": 0,\n",
-    "        \"IY\": 1, \"IH\": 1, \"EH\": 1, \"AE\": 1, \"AA\": 1, \"UW\": 1, \"UH\": 1, \"AO\": 1,\n",
-    "        \"OW\": 1, \"ER\": 1, \"AH\": 1, \"AW\": 1, \"AY\": 1, \"EY\": 1, \"OY\": 1\n",
+    "        \"P\": 1, \"B\": 2, \"T\": 1, \"D\": 2, \"K\": 1, \"G\": 2, \"F\": 1, \"V\": 2,\n",
+    "        \"TH\": 1, \"DH\": 2, \"S\": 1, \"Z\": 2, \"SH\": 1, \"ZH\": 2, \"CH\": 1, \"JH\": 2,\n",
+    "        \"M\": 2, \"N\": 2, \"NG\": 2, \"L\": 2, \"R\": 2, \"W\": 2, \"Y\": 2, \"HH\": 1,\n",
+    "        \"IY\": 2, \"IH\": 2, \"EH\": 2, \"AE\": 2, \"AA\": 2, \"UW\": 2, \"UH\": 2, \"AO\": 2,\n",
+    "        \"OW\": 2, \"ER\": 2, \"AH\": 2, \"AW\": 2, \"AY\": 2, \"EY\": 2, \"OY\": 2, 0:0\n",
     "    }\n",
     "\n",
     "    # Function to convert lists to integer lists\n",
@@ -265,17 +266,18 @@
     "print(get_phoneme_features(\"W\"))   # Expecting two vectors due to dual place of articulation\n",
     "print(get_phoneme_features(\"OY\"))  # Expecting two vectors due to varying height, backness, and roundedness\n",
     "print(get_phoneme_features(\"AA\"))  # Expecting a single vector\n",
-    "print(get_phoneme_features(\"SIL\"))  # Expecting a single vector\n"
+    "print(get_phoneme_features(\"SIL\"))  # Expecting a single vector\n",
+    "print(get_phoneme_features(\"T\"))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "def convert_phonemes_to_articulatory(phoneme_list, maxSeqLen=500):\n",
+    "def convert_phonemes_to_articulatory(phoneme_list, maxSeqLen=500, to_pad = True):\n",
     "    \n",
     "    articulatory_feats_list = []\n",
     "    \n",
@@ -289,8 +291,11 @@
     "        else:\n",
     "            \n",
     "            articulatory_feats_list.append(articulatory_feats)\n",
-    "            \n",
-    "    stacked_feats = np.stack(articulatory_feats_list) + 1\n",
+    "        \n",
+    "    stacked_feats = np.stack(articulatory_feats_list)\n",
+    "\n",
+    "    if not to_pad:\n",
+    "        return stacked_feats.astype(np.int32)\n",
     "    \n",
     "    padded_array = np.zeros((maxSeqLen - stacked_feats.shape[0], stacked_feats.shape[1]))\n",
     "            \n",
@@ -299,11 +304,230 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2, 0, 0, 3, 3, 1], [2, 0, 0, 2, 3, 2], [2, 0, 0, 1, 1, 1]] [[2 0 0 3 3 1]\n",
+      " [2 0 0 2 3 2]\n",
+      " [2 0 0 1 1 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "AF = convert_phonemes_to_articulatory(['AA', 'OY'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 4, 1, 0, 0, 0]] [[1 4 1 0 0 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ph = convert_phonemes_to_articulatory(['T'])[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 4 1 0 0 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "AF = convert_phonemes_to_articulatory(['AA', 'OY'])"
+    "import torch\n",
+    "def find_possible_phonemes(logits):\n",
+    "    best_prob = 0\n",
+    "    best_phoneme = None\n",
+    "    for phoneme in all_phonemes:\n",
+    "        feats = convert_phonemes_to_articulatory(phoneme, maxSeqLen=1)\n",
+    "        cur_prob = 1\n",
+    "        for i in range(len(feats)):\n",
+    "            cur_logits = torch.softmax(logits[i])\n",
+    "            cur_prob *= cur_logits[feats[i]]\n",
+    "        \n",
+    "        if(cur_prob > best_prob):\n",
+    "            best_prob = cur_prob \n",
+    "            best_phoneme = phoneme\n",
+    "\n",
+    "    return best_phoneme"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "31\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sum([3, 10, 7, 4, 4, 3]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_feat_list = [3, 10, 7, 4, 4, 3]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list assignment index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[42], line 13\u001b[0m\n\u001b[1;32m     11\u001b[0m list_art_feats \u001b[39m=\u001b[39m [\u001b[39m0\u001b[39m]\u001b[39m*\u001b[39m\u001b[39m31\u001b[39m\n\u001b[1;32m     12\u001b[0m \u001b[39mfor\u001b[39;00m feat \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(feats)):\n\u001b[0;32m---> 13\u001b[0m     list_art_feats[val \u001b[39m+\u001b[39;49m feats[feat]] \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m     14\u001b[0m     val \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m num_feat_list[feat] \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m     16\u001b[0m matrix\u001b[39m.\u001b[39mappend(list_art_feats)\n",
+      "\u001b[0;31mIndexError\u001b[0m: list assignment index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "matrix = []\n",
+    "corresponding_phonemes = []\n",
+    "\n",
+    "for phoneme in all_phonemes:\n",
+    "    feat_list = convert_phonemes_to_articulatory([phoneme], to_pad=False)\n",
+    "\n",
+    "    for idx in range(len(feat_list)):\n",
+    "        corresponding_phonemes.append(phoneme)\n",
+    "        feats = feat_list[idx]\n",
+    "        val = 0\n",
+    "        list_art_feats = [0]*37\n",
+    "        for feat in range(len(feats)):\n",
+    "            list_art_feats[val + feats[feat]] = 1\n",
+    "            val += num_feat_list[feat] + 1\n",
+    "        \n",
+    "        matrix.append(list_art_feats)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matrix=  np.array(matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matrix = matrix.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(31, 44)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(matrix.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "44\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(corresponding_phonemes))"
    ]
   },
   {
@@ -330,7 +554,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.21"
   },
   "orig_nbformat": 4
  },
