--- a/notebooks/formatCompetitionData.ipynb
+++ b/notebooks/formatCompetitionData.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "1cf55fa2",
    "metadata": {},
    "outputs": [],
@@ -143,15 +143,16 @@
     "    height = []\n",
     "    backness = []\n",
     "    roundedness = []\n",
-    "\n",
+    "    i = 0\n",
     "    for x in range(len(session_data['inputFeatures'])):\n",
     "        allDat.append(session_data['inputFeatures'][x])\n",
     "        trueSentences.append(session_data['transcriptions'][x])\n",
-    "        \n",
+    "        print(session_data['transcriptions'][x])\n",
     "        thisTranscription = str(session_data['transcriptions'][x]).strip()\n",
     "        thisTranscription = re.sub(r'[^a-zA-Z\\- \\']', '', thisTranscription)\n",
     "        thisTranscription = thisTranscription.replace('--', '').lower()\n",
     "        addInterWordSymbol = True\n",
+    "    \n",
     "\n",
     "        phonemes = []\n",
     "        for p in g2p(thisTranscription):\n",
@@ -164,6 +165,13 @@
     "        #add one SIL symbol at the end so there's one at the end of each word\n",
     "        if addInterWordSymbol:\n",
     "            phonemes.append('SIL')\n",
+    "            \n",
+    "        print(phonemes)\n",
+    "        i +=1 \n",
+    "        if i > 10:\n",
+    "            break\n",
+    "        else:\n",
+    "            continue\n",
     "        \n",
     "        seqLen = len(phonemes)\n",
     "        maxSeqLen = 500\n",
@@ -214,10 +222,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "815eca0e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nuclear rockets can destroy airfields with ease.\n",
+      "['N', 'UW', 'K', 'L', 'IY', 'ER', 'SIL', 'R', 'AA', 'K', 'AH', 'T', 'S', 'SIL', 'K', 'AE', 'N', 'SIL', 'D', 'IH', 'S', 'T', 'R', 'OY', 'SIL', 'EH', 'R', 'F', 'IY', 'L', 'D', 'Z', 'SIL', 'W', 'IH', 'DH', 'SIL', 'IY', 'Z', 'SIL']\n",
+      "The best way to learn is to solve extra problems.\n",
+      "['DH', 'AH', 'SIL', 'B', 'EH', 'S', 'T', 'SIL', 'W', 'EY', 'SIL', 'T', 'UW', 'SIL', 'L', 'ER', 'N', 'SIL', 'IH', 'Z', 'SIL', 'T', 'UW', 'SIL', 'S', 'AA', 'L', 'V', 'SIL', 'EH', 'K', 'S', 'T', 'R', 'AH', 'SIL', 'P', 'R', 'AA', 'B', 'L', 'AH', 'M', 'Z', 'SIL']\n",
+      "The spray will be used in first division matches next season.\n",
+      "['DH', 'AH', 'SIL', 'S', 'P', 'R', 'EY', 'SIL', 'W', 'IH', 'L', 'SIL', 'B', 'IY', 'SIL', 'Y', 'UW', 'Z', 'D', 'SIL', 'IH', 'N', 'SIL', 'F', 'ER', 'S', 'T', 'SIL', 'D', 'IH', 'V', 'IH', 'ZH', 'AH', 'N', 'SIL', 'M', 'AE', 'CH', 'AH', 'Z', 'SIL', 'N', 'EH', 'K', 'S', 'T', 'SIL', 'S', 'IY', 'Z', 'AH', 'N', 'SIL']\n",
+      "Our experiment's positive outcome was unexpected.\n",
+      "['AW', 'ER', 'SIL', 'IH', 'K', 'S', 'P', 'EH', 'R', 'AH', 'M', 'AH', 'N', 'T', 'S', 'SIL', 'P', 'AA', 'Z', 'AH', 'T', 'IH', 'V', 'SIL', 'AW', 'T', 'K', 'AH', 'M', 'SIL', 'W', 'AA', 'Z', 'SIL', 'AH', 'N', 'IH', 'K', 'S', 'P', 'EH', 'K', 'T', 'IH', 'D', 'SIL']\n",
+      "Alimony harms a divorced man's wealth.\n",
+      "['AE', 'L', 'AH', 'M', 'OW', 'N', 'IY', 'SIL', 'HH', 'AA', 'R', 'M', 'Z', 'SIL', 'AH', 'SIL', 'D', 'IH', 'V', 'AO', 'R', 'S', 'T', 'SIL', 'M', 'AE', 'N', 'Z', 'SIL', 'W', 'EH', 'L', 'TH', 'SIL']\n",
+      "She uses both names interchangeably.\n",
+      "['SH', 'IY', 'SIL', 'Y', 'UW', 'Z', 'IH', 'Z', 'SIL', 'B', 'OW', 'TH', 'SIL', 'N', 'EY', 'M', 'Z', 'SIL', 'IH', 'N', 'T', 'ER', 'CH', 'EY', 'N', 'JH', 'AH', 'B', 'L', 'IY', 'SIL']\n",
+      "The misquote was retracted with an apology.\n",
+      "['DH', 'AH', 'SIL', 'M', 'IH', 'S', 'K', 'W', 'OW', 'T', 'SIL', 'W', 'AA', 'Z', 'SIL', 'R', 'IY', 'T', 'R', 'AE', 'K', 'T', 'AH', 'D', 'SIL', 'W', 'IH', 'DH', 'SIL', 'AE', 'N', 'SIL', 'AH', 'P', 'AA', 'L', 'AH', 'JH', 'IY', 'SIL']\n",
+      "Critics fear the erosion of consumer protections and environmental standards.\n",
+      "['K', 'R', 'IH', 'T', 'IH', 'K', 'S', 'SIL', 'F', 'IH', 'R', 'SIL', 'DH', 'AH', 'SIL', 'IH', 'R', 'OW', 'ZH', 'AH', 'N', 'SIL', 'AH', 'V', 'SIL', 'K', 'AH', 'N', 'S', 'UW', 'M', 'ER', 'SIL', 'P', 'R', 'AH', 'T', 'EH', 'K', 'SH', 'AH', 'N', 'Z', 'SIL', 'AH', 'N', 'D', 'SIL', 'IH', 'N', 'V', 'AY', 'R', 'AH', 'N', 'M', 'EH', 'N', 'T', 'AH', 'L', 'SIL', 'S', 'T', 'AE', 'N', 'D', 'ER', 'D', 'Z', 'SIL']\n",
+      "Her lips, moist and parted, spoke his name.\n",
+      "['HH', 'ER', 'SIL', 'L', 'IH', 'P', 'S', 'SIL', 'M', 'OY', 'S', 'T', 'SIL', 'AH', 'N', 'D', 'SIL', 'P', 'AA', 'R', 'T', 'AH', 'D', 'SIL', 'S', 'P', 'OW', 'K', 'SIL', 'HH', 'IH', 'Z', 'SIL', 'N', 'EY', 'M', 'SIL']\n",
+      "How do they turn out later?\n",
+      "['HH', 'AW', 'SIL', 'D', 'UW', 'SIL', 'DH', 'EY', 'SIL', 'T', 'ER', 'N', 'SIL', 'AW', 'T', 'SIL', 'L', 'EY', 'T', 'ER', 'SIL']\n",
+      "The eastern coast is a place for pure pleasure and excitement.\n",
+      "['DH', 'AH', 'SIL', 'IY', 'S', 'T', 'ER', 'N', 'SIL', 'K', 'OW', 'S', 'T', 'SIL', 'IH', 'Z', 'SIL', 'AH', 'SIL', 'P', 'L', 'EY', 'S', 'SIL', 'F', 'AO', 'R', 'SIL', 'P', 'Y', 'UH', 'R', 'SIL', 'P', 'L', 'EH', 'ZH', 'ER', 'SIL', 'AH', 'N', 'D', 'SIL', 'IH', 'K', 'S', 'AY', 'T', 'M', 'AH', 'N', 'T', 'SIL']\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[16], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m dataDir \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m/data/willett_data/competitionData/\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m      7\u001b[0m \u001b[39mfor\u001b[39;00m dayIdx \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(sessionNames)):\n\u001b[0;32m----> 8\u001b[0m     trainDataset \u001b[39m=\u001b[39m getDataset(dataDir \u001b[39m+\u001b[39;49m \u001b[39m'\u001b[39;49m\u001b[39m/train/\u001b[39;49m\u001b[39m'\u001b[39;49m \u001b[39m+\u001b[39;49m sessionNames[dayIdx] \u001b[39m+\u001b[39;49m \u001b[39m'\u001b[39;49m\u001b[39m.mat\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[1;32m      9\u001b[0m     testDataset \u001b[39m=\u001b[39m getDataset(dataDir \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m/test/\u001b[39m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m sessionNames[dayIdx] \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m.mat\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     11\u001b[0m     trainDatasets\u001b[39m.\u001b[39mappend(trainDataset)\n",
+      "Cell \u001b[0;32mIn[15], line 79\u001b[0m, in \u001b[0;36mgetDataset\u001b[0;34m(fileName)\u001b[0m\n\u001b[1;32m     76\u001b[0m \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(newDataset[\u001b[39m'\u001b[39m\u001b[39msentenceDat\u001b[39m\u001b[39m'\u001b[39m])):\n\u001b[1;32m     78\u001b[0m     timeSeriesLens\u001b[39m.\u001b[39mappend(newDataset[\u001b[39m'\u001b[39m\u001b[39msentenceDat\u001b[39m\u001b[39m'\u001b[39m][x]\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m])\n\u001b[0;32m---> 79\u001b[0m     zeroIdx \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39margwhere(newDataset[\u001b[39m'\u001b[39;49m\u001b[39mphonemes\u001b[39;49m\u001b[39m'\u001b[39;49m][x]\u001b[39m==\u001b[39m\u001b[39m0\u001b[39m)\n\u001b[1;32m     80\u001b[0m     phoneLens\u001b[39m.\u001b[39mappend(zeroIdx[\u001b[39m0\u001b[39m,\u001b[39m0\u001b[39m])\n\u001b[1;32m     81\u001b[0m     \u001b[39m#zeroIdx_articulatory = np.argwhere(newDataset['voiced'][x]==0)\u001b[39;00m\n\u001b[1;32m     82\u001b[0m     \u001b[39m#articulatoryLens.append(zeroIdx_articulatory[0,0])\u001b[39;00m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "trainDatasets = []\n",
     "testDatasets = []\n",
