--- a/notebooks/latent_speech.ipynb
+++ b/notebooks/latent_speech.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,19 +15,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "from g2p_en import G2p\n",
+    "g2p = G2p()\n",
+    "\n",
+    "PHONE_DEF = [\n",
+    "    'AA', 'AE', 'AH', 'AO', 'AW',\n",
+    "    'AY', 'B',  'CH', 'D', 'DH',\n",
+    "    'EH', 'ER', 'EY', 'F', 'G',\n",
+    "    'HH', 'IH', 'IY', 'JH', 'K',\n",
+    "    'L', 'M', 'N', 'NG', 'OW',\n",
+    "    'OY', 'P', 'R', 'S', 'SH',\n",
+    "    'T', 'TH', 'UH', 'UW', 'V',\n",
+    "    'W', 'Y', 'Z', 'ZH'\n",
+    "]\n",
+    "PHONE_DEF_SIL = PHONE_DEF + ['SIL']\n",
+    "\n",
+    "def phoneToId(p):\n",
+    "    return PHONE_DEF_SIL.index(p)\n",
+    "\n",
+    "def convert_to_phonemes(transcript):\n",
+    "    \n",
+    "    thisTranscription = transcript.strip()\n",
+    "    thisTranscription = re.sub(r'[^a-zA-Z\\- \\']', '', thisTranscription)\n",
+    "    thisTranscription = thisTranscription.replace('--', '').lower()\n",
+    "    addInterWordSymbol = True\n",
+    "\n",
+    "    phonemes = []\n",
+    "    \n",
+    "    for p in g2p(thisTranscription):\n",
+    "        if addInterWordSymbol and p==' ':\n",
+    "            phonemes.append('SIL')\n",
+    "        p = re.sub(r'[0-9]', '', p)  # Remove stress\n",
+    "        if re.match(r'[A-Z]+', p):  # Only keep phonemes\n",
+    "            phonemes.append(p)\n",
+    "\n",
+    "    #add one SIL symbol at the end so there's one at the end of each word\n",
+    "    if addInterWordSymbol:\n",
+    "        phonemes.append('SIL')\n",
+    "        \n",
+    "    seqLen = len(phonemes)\n",
+    "    maxSeqLen = 500\n",
+    "    seqClassIDs = np.zeros([maxSeqLen]).astype(np.int32)\n",
+    "    seqClassIDs[0:seqLen] = [phoneToId(p) + 1 for p in phonemes]\n",
+    "    return seqClassIDs\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2.81 seconds\n",
-      "WAS ASCENDING THE STAIRS LEADING TO DEBRAY'S APARTMENTS\n"
+      "WARNING:speechbrain.lobes.models.huggingface_transformers.huggingface:speechbrain.lobes.models.huggingface_transformers.huggingface - HubertModel is frozen.\n"
      ]
     }
    ],
    "source": [
+    "from speechbrain.lobes.models.huggingface_transformers.hubert import HuBERT\n",
+    "\n",
+    "hubert_path = \"facebook/hubert-large-ls960-ft\"\n",
+    "model_hubert = HuBERT(hubert_path, save_path=\"/data/LLMs/\", freeze=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Inspect the first sample in the dataset\n",
+    "\n",
     "librispeech_path = \"/data/LLMs/librispeech/\"\n",
     "\n",
     "dataset = torchaudio.datasets.LIBRISPEECH(\n",
@@ -36,32 +101,63 @@
     "    download=False\n",
     ")\n",
     "\n",
-    "waveform, sample_rate, transcript, speaker_id, chapter_id, utterance_id = dataset[111]\n",
+    "sample = dataset[0]\n",
     "\n",
-    "def compute_waveform_length(waveform, sample_rate=16000):\n",
-    "    \n",
-    "    waveform_len = waveform.shape[1]\n",
-    "    print(f\"{waveform_len / sample_rate} seconds\") \n",
-    "    \n",
-    "compute_waveform_length(waveform)\n",
+    "# Unpack the returned tuple\n",
+    "waveform, sample_rate, transcript, speaker_id, chapter_id, utterance_id = sample\n",
     "print(transcript)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from speechbrain.lobes.models.huggingface_transformers.hubert import HuBERT\n",
+    "from torch.utils.data import DataLoader\n",
+    "import torchaudio.transforms as T\n",
     "\n",
-    "hubert_path = \"facebook/hubert-large-ls960-ft\"\n",
-    "model_hubert = HuBERT(hubert_path, save_path=\"/data/LLMs/\")"
+    "# Custom collate function with padding\n",
+    "def collate_fn(batch):\n",
+    "    waveforms = [item[0].squeeze(0) for item in batch]  # Remove channel dimension\n",
+    "    lengths = torch.tensor([wav.shape[0] for wav in waveforms])\n",
+    "    \n",
+    "    # Pad sequences to match longest in batch\n",
+    "    padded_waveforms = torch.nn.utils.rnn.pad_sequence(\n",
+    "        waveforms, \n",
+    "        batch_first=True\n",
+    "    )\n",
+    "    \n",
+    "    transcripts = [convert_to_phonemes(item[2]) for item in batch]  # Extract transcripts\n",
+    "    \n",
+    "    \n",
+    "    return padded_waveforms, lengths, transcripts\n",
+    "\n",
+    "# Create DataLoader\n",
+    "dataloader = DataLoader(\n",
+    "    dataset,\n",
+    "    batch_size=8,\n",
+    "    shuffle=True,\n",
+    "    collate_fn=collate_fn,\n",
+    "    num_workers=4\n",
+    ")\n",
+    "\n",
+    "for waveforms, lengths, transcripts in dataloader:\n",
+    "    # HuBERT expects float32 inputs in range [-1, 1]\n",
+    "    waveforms = waveforms.float()\n",
+    "    \n",
+    "    # Forward pass\n",
+    "    with torch.no_grad():\n",
+    "        embeddings = model_hubert(waveforms)\n",
+    "    \n",
+    "    print(f\"Input shape: {waveforms.shape}\")\n",
+    "    print(f\"Embeddings shape: {embeddings.shape}\")\n",
+    "    break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +175,8 @@
     "from torchaudio.models import Conformer\n",
     "\n",
     "class LightweightHuBERTConformer(nn.Module):\n",
-    "    def __init__(self):\n",
+    "    def __init__(self, input_dim=1024, num_heads=4, ffn_dim=512, num_layers=6, depthwise_conv_kernel_size=31, \n",
+    "                 dropout=0.1, use_group_norm=False, convolution_first):\n",
     "        super().__init__()\n",
     "        \n",
     "        # Core Conformer Encoder\n",
@@ -118,7 +215,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.std(fea_hubert[:, 0, :])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,45 +233,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "LightweightHuBERTConformer.forward() missing 1 required positional argument: 'lengths'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[36]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m output_model = \u001b[43mmodel\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfea_hubert\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/miniconda3/envs/speechbrain/lib/python3.12/site-packages/torch/nn/modules/module.py:1739\u001b[39m, in \u001b[36mModule._wrapped_call_impl\u001b[39m\u001b[34m(self, *args, **kwargs)\u001b[39m\n\u001b[32m   1737\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._compiled_call_impl(*args, **kwargs)  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[32m   1738\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m1739\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_call_impl\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/miniconda3/envs/speechbrain/lib/python3.12/site-packages/torch/nn/modules/module.py:1750\u001b[39m, in \u001b[36mModule._call_impl\u001b[39m\u001b[34m(self, *args, **kwargs)\u001b[39m\n\u001b[32m   1745\u001b[39m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[32m   1746\u001b[39m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[32m   1747\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m._backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m._backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m._forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m._forward_pre_hooks\n\u001b[32m   1748\u001b[39m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[32m   1749\u001b[39m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[32m-> \u001b[39m\u001b[32m1750\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mforward_call\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1752\u001b[39m result = \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m   1753\u001b[39m called_always_called_hooks = \u001b[38;5;28mset\u001b[39m()\n",
-      "\u001b[31mTypeError\u001b[39m: LightweightHuBERTConformer.forward() missing 1 required positional argument: 'lengths'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "output_model = model(fea_hubert, torch.tensor([fea_hubert.shape[1]]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'CausalLMOutput' object has no attribute 'last_hidden_state'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 41\u001b[39m\n\u001b[32m     39\u001b[39m \u001b[38;5;66;03m# Extract phonemes from all files\u001b[39;00m\n\u001b[32m     40\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m audio_file \u001b[38;5;129;01min\u001b[39;00m flac_files[:\u001b[32m10\u001b[39m]:  \u001b[38;5;66;03m# Process a subset first\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m41\u001b[39m     embedding = \u001b[43mextract_wav2vec_phonemes\u001b[49m\u001b[43m(\u001b[49m\u001b[43maudio_file\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     42\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mFile: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00maudio_file\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 28\u001b[39m, in \u001b[36mextract_wav2vec_phonemes\u001b[39m\u001b[34m(audio_path)\u001b[39m\n\u001b[32m     26\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m torch.no_grad():\n\u001b[32m     27\u001b[39m     outputs = model(**inputs)\n\u001b[32m---> \u001b[39m\u001b[32m28\u001b[39m     last_hidden_states = \u001b[43moutputs\u001b[49m\u001b[43m.\u001b[49m\u001b[43mlast_hidden_state\u001b[49m  \u001b[38;5;66;03m# (batch_size, time_steps, hidden_size)\u001b[39;00m\n\u001b[32m     30\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m last_hidden_states\n",
-      "\u001b[31mAttributeError\u001b[39m: 'CausalLMOutput' object has no attribute 'last_hidden_state'"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "output_model.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import os\n",
     "import torch\n",
@@ -236,7 +324,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.9.18"
   },
   "orig_nbformat": 4
  },
