--- a/notebooks/hubert.ipynb
+++ b/notebooks/hubert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "<torch._C.Generator at 0x7efc731d5ab0>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
     "import types\n",
     "from typing import Optional, Tuple\n",
     "torch.manual_seed(1)\n",
-    "model = ta.pipelines.WAV2VEC2_BASE.get_model()\n",
+    "model = ta.pipelines.HUBERT_ASR_LARGE.get_model()\n",
     "\n",
     "# Calculate total number of parameters\n",
     "total_params = sum(p.numel() for p in model.parameters())\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
        "       grad_fn=<SelectBackward0>)"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
        "       grad_fn=<SelectBackward0>)"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.0645)\n",
+      "tensor(0.5852)\n",
       "tensor(6839.4707)\n"
      ]
     }
@@ -155,7 +155,7 @@
     "\n",
     "output1 = model_hubert(dummy_data1,wav_lens=torch.tensor([1.0]))\n",
     "\n",
-    "N2=10100\n",
+    "N2=11000\n",
     "dummy_data2 = torch.randn([1,N2])\n",
     "dummy_data = torch.zeros([2,N2])\n",
     "dummy_data[0,:N1] = dummy_data1\n",
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
        "        0.3976, 0.3931, 0.3954, 0.3472])"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,19 +192,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([0.3957, 0.3994, 0.4231, 0.4277, 0.4315, 0.4403, 0.4389, 0.4317, 0.4479,\n",
-       "        0.4322, 0.4212, 0.4291, 0.4066, 0.3614, 0.3979, 0.4455, 0.4364, 0.4322,\n",
-       "        0.4219, 0.4229, 0.4374, 0.4233, 0.4175, 0.4335, 0.4234, 0.3316, 0.4269,\n",
-       "        0.4010, 0.3976, 0.3983, 0.3479])"
+       "tensor([0.3943, 0.3976, 0.4224, 0.4257, 0.4293, 0.4392, 0.4338, 0.4291, 0.4454,\n",
+       "        0.4268, 0.4190, 0.4268, 0.4010, 0.3221, 0.3974, 0.4432, 0.4330, 0.4294,\n",
+       "        0.4214, 0.4209, 0.4351, 0.4209, 0.4157, 0.4315, 0.4201, 0.3688, 0.4240,\n",
+       "        0.3986, 0.3941, 0.3960, 0.3472])"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
