--- a/notebooks/dynamic_batch.ipynb
+++ b/notebooks/dynamic_batch.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home2/ebrahim/miniconda3/envs/speech-bci/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "INFO:speechbrain.utils.quirks:Applied quirks (see `speechbrain.utils.quirks`): [disable_jit_profiling, allow_tf32]\n",
+      "INFO:speechbrain.utils.quirks:Excluded quirks specified by the `SB_DISABLE_QUIRKS` environment (comma-separated list): []\n"
+     ]
+    }
+   ],
    "source": [
     "from speechbrain.dataio.sampler import DynamicBatchSampler\n",
     "import torch\n",
@@ -14,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,69 +103,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Precompute all waveform lengths (time dimension is at index 1)\n",
-    "# Dataset and DataLoader setup\n",
-    "\n",
-    "librispeech_path = \"/data/LLMs/librispeech/\"\n",
-    "\n",
-    "#trainDataset = torchaudio.datasets.LIBRISPEECH(\n",
-    "#    root=librispeech_path,\n",
-    "#    url=\"train-clean-100\",\n",
-    "#    download=False,\n",
-    "#)\n",
-    "\n",
-    "#lengths = [trainDataset[i][0].shape[1] for i in range(len(trainDataset))]\n",
-    "\n",
-    "valDataset = torchaudio.datasets.LIBRISPEECH(\n",
-    "    root=librispeech_path,\n",
-    "    url=\"dev-clean\",\n",
-    "    download=False,\n",
-    ")\n",
-    "lengths = [valDataset[i][0].shape[1] for i in range(len(valDataset))]\n",
-    "np.save('/data/LLMs/librispeech/LibriSpeech/dev-clean/lengths', lengths)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "6 // 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AxisError",
-     "evalue": "axis -1 is out of bounds for array of dimension 0",
+     "ename": "SyntaxError",
+     "evalue": "positional argument follows keyword argument (3304482115.py, line 93)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAxisError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[51], line 82\u001b[0m\n\u001b[1;32m     78\u001b[0m             \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mBucket \u001b[39m\u001b[39m{\u001b[39;00mbucket_id\u001b[39m}\u001b[39;00m\u001b[39m: \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mlen\u001b[39m(bucket)\u001b[39m}\u001b[39;00m\u001b[39m examples\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     79\u001b[0m     \u001b[39m#\u001b[39;00m\n\u001b[0;32m---> 82\u001b[0m batch_sampler \u001b[39m=\u001b[39m DynamicBatchSampler(\n\u001b[1;32m     83\u001b[0m     lengths\u001b[39m=\u001b[39;49mnp\u001b[39m.\u001b[39;49mload(\u001b[39m'\u001b[39;49m\u001b[39m/data/LLMs/librispeech/LibriSpeech/train-clean-100/lengths.npy\u001b[39;49m\u001b[39m'\u001b[39;49m),\n\u001b[1;32m     84\u001b[0m     batch_size\u001b[39m=\u001b[39;49m\u001b[39m64\u001b[39;49m,\n\u001b[1;32m     85\u001b[0m     shuffle\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m,\n\u001b[1;32m     86\u001b[0m     bucket_size\u001b[39m=\u001b[39;49m\u001b[39m8000\u001b[39;49m,\n\u001b[1;32m     87\u001b[0m )\n\u001b[1;32m     89\u001b[0m trainLoader \u001b[39m=\u001b[39m DataLoader(\n\u001b[1;32m     90\u001b[0m     trainDataset,\n\u001b[1;32m     91\u001b[0m     batch_sampler\u001b[39m=\u001b[39mbatch_sampler,\n\u001b[1;32m     92\u001b[0m     collate_fn\u001b[39m=\u001b[39mcollate_fn,\n\u001b[1;32m     93\u001b[0m     num_workers\u001b[39m=\u001b[39m\u001b[39m4\u001b[39m,\n\u001b[1;32m     94\u001b[0m )\n",
-      "Cell \u001b[0;32mIn[51], line 28\u001b[0m, in \u001b[0;36mDynamicBatchSampler.__init__\u001b[0;34m(self, lengths, batch_size, shuffle, bucket_size)\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[39m# combine small buckets\u001b[39;00m\n\u001b[1;32m     26\u001b[0m prev_bucket_id \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m---> 28\u001b[0m \u001b[39mfor\u001b[39;00m bucket_id, vals \u001b[39min\u001b[39;00m np\u001b[39m.\u001b[39;49msort(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mbuckets\u001b[39m.\u001b[39;49mitems()):\n\u001b[1;32m     29\u001b[0m     \n\u001b[1;32m     30\u001b[0m     \u001b[39m# if bucket is too small\u001b[39;00m\n\u001b[1;32m     31\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(vals) \u001b[39m<\u001b[39m min_bucket_size:\n\u001b[1;32m     32\u001b[0m         \u001b[39m# check if previous bucket exists\u001b[39;00m\n\u001b[1;32m     33\u001b[0m         \u001b[39mif\u001b[39;00m prev_bucket_id \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m     34\u001b[0m             \n\u001b[1;32m     35\u001b[0m             \u001b[39m# merge small bucket into previous big bucket\u001b[39;00m\n",
-      "File \u001b[0;32m~/miniconda3/envs/speech-bci/lib/python3.9/site-packages/numpy/core/fromnumeric.py:1017\u001b[0m, in \u001b[0;36msort\u001b[0;34m(a, axis, kind, order)\u001b[0m\n\u001b[1;32m   1015\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   1016\u001b[0m     a \u001b[39m=\u001b[39m asanyarray(a)\u001b[39m.\u001b[39mcopy(order\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mK\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m-> 1017\u001b[0m a\u001b[39m.\u001b[39;49msort(axis\u001b[39m=\u001b[39;49maxis, kind\u001b[39m=\u001b[39;49mkind, order\u001b[39m=\u001b[39;49morder)\n\u001b[1;32m   1018\u001b[0m \u001b[39mreturn\u001b[39;00m a\n",
-      "\u001b[0;31mAxisError\u001b[0m: axis -1 is out of bounds for array of dimension 0"
+      "\u001b[0;36m  Cell \u001b[0;32mIn[3], line 93\u001b[0;36m\u001b[0m\n\u001b[0;31m    collate_fn=collate_fn,\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m positional argument follows keyword argument\n"
      ]
     }
    ],
@@ -166,7 +123,8 @@
     "\n",
     "# Dynamic Batch Sampler with Bucketing\n",
     "class DynamicBatchSampler:\n",
-    "    def __init__(self, lengths, batch_size, shuffle=True, bucket_size=4000):\n",
+    "    def __init__(self, lengths, batch_size, shuffle=True, bucket_size=4000,\n",
+    "                  min_bucket_size=16):\n",
     "        self.lengths = lengths\n",
     "        self.batch_size = batch_size\n",
     "        self.shuffle = shuffle\n",
@@ -197,16 +155,16 @@
     "                    # merge small bucket into previous big bucket\n",
     "                    self.buckets[prev_bucket_id].extend(vals)\n",
     "                   \n",
-    "                    \n",
+    "                # if no valid previous bucket, move ids\n",
+    "                # to the next available bucket\n",
     "                elif prev_bucket_id is None: \n",
-    "                    # add it to the next bucket\n",
     "                    self.buckets[bucket_id+1].extend(vals)\n",
     "                    \n",
     "                # delete small bucket\n",
     "                del self.buckets[bucket_id]\n",
     "                    \n",
-    "            # if bucket is big enough, save its ids so future\n",
-    "            # small buckets can be added\n",
+    "            # if bucket is big enough, mark it as the last\n",
+    "            # valid bucket\n",
     "            else: \n",
     "                prev_bucket_id = bucket_id\n",
     "                    \n",
@@ -258,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -295,15 +253,9 @@
       "Bucket 17: 368 examples\n",
       "Bucket 8: 322 examples\n",
       "Bucket 4: 259 examples\n",
-      "Bucket 34: 48 examples\n",
+      "Bucket 34: 53 examples\n",
       "Bucket 12: 324 examples\n",
-      "Bucket 3: 23 examples\n",
-      "Bucket 2: 1 examples\n",
-      "Bucket 38: 1 examples\n",
-      "Bucket 35: 1 examples\n",
-      "Bucket 36: 1 examples\n",
-      "Bucket 39: 1 examples\n",
-      "Bucket 49: 1 examples\n"
+      "Bucket 3: 24 examples\n"
      ]
     }
    ],
