--- a/src/neural_decoder/test_model.ipynb
+++ b/src/neural_decoder/test_model.ipynb
@@ -2,94 +2,162 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mae import MAE\n",
+    "from bit import BiT\n",
+    "from dataset import SpeechDataset\n",
+    "from torch.nn.utils.rnn import pad_sequence\n",
+    "import pickle\n",
+    "import torch\n",
+    "from torch.utils.data import DataLoader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "args = {}\n",
+    "modelName = 'BiT'\n",
+    "args['outputDir'] = '/data/willett_data/outputs/' + modelName\n",
+    "args['datasetPath'] = '/data/willett_data/ptDecoder_ctc'\n",
+    "args['seqLen'] = 150\n",
+    "args['maxTimeSeriesLen'] = 1200\n",
+    "args['batchSize'] = 64\n",
+    "args['lrStart'] = 0.006\n",
+    "args['lrEnd'] = 0.006\n",
+    "args['patch_height'] = 32\n",
+    "args['patch_width'] = 16\n",
+    "args['n_heads'] = 64\n",
+    "args['mlp_ratio'] = 4\n",
+    "args['embedding_dim'] = 1024\n",
+    "args['nBatch'] = 30000 #3000\n",
+    "args['n_layers'] = 3\n",
+    "args['nClasses'] = 40\n",
+    "args['nInputFeatures'] = 256\n",
+    "args['dropout'] = 0.4\n",
+    "args['whiteNoiseSD'] = 0.8\n",
+    "args['constantOffsetSD'] = 0.2\n",
+    "args['gaussianSmoothWidth'] = 2.0\n",
+    "args['l2_decay'] = 1e-5\n",
+    "args['device'] = 'cuda:2'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load neural data \n",
+    "def getDatasetLoaders(\n",
+    "    datasetName,\n",
+    "    batchSize,\n",
+    "):\n",
+    "    with open(datasetName, \"rb\") as handle:\n",
+    "        loadedData = pickle.load(handle)\n",
+    "\n",
+    "    def _padding(batch):\n",
+    "        X, y, X_lens, y_lens, days = zip(*batch)\n",
+    "        X_padded = pad_sequence(X, batch_first=True, padding_value=0)\n",
+    "        y_padded = pad_sequence(y, batch_first=True, padding_value=0)\n",
+    "\n",
+    "        return (\n",
+    "            X_padded,\n",
+    "            y_padded,\n",
+    "            torch.stack(X_lens),\n",
+    "            torch.stack(y_lens),\n",
+    "            torch.stack(days),\n",
+    "        )\n",
+    "\n",
+    "    train_ds = SpeechDataset(loadedData[\"train\"], transform=None)\n",
+    "    test_ds = SpeechDataset(loadedData[\"test\"])\n",
+    "\n",
+    "    train_loader = DataLoader(\n",
+    "        train_ds,\n",
+    "        batch_size=batchSize,\n",
+    "        shuffle=True,\n",
+    "        num_workers=0,\n",
+    "        pin_memory=True,\n",
+    "        collate_fn=_padding,\n",
+    "    )\n",
+    "    test_loader = DataLoader(\n",
+    "        test_ds,\n",
+    "        batch_size=batchSize,\n",
+    "        shuffle=False,\n",
+    "        num_workers=0,\n",
+    "        pin_memory=True,\n",
+    "        collate_fn=_padding,\n",
+    "    )\n",
+    "\n",
+    "    return train_loader, test_loader, loadedData\n",
+    "\n",
+    "\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "def pad_to_multiple(tensor, multiple, dim=1, value=0):\n",
+    "    \"\"\"\n",
+    "    Pads `tensor` along `dim` so that its size is divisible by `multiple`.\n",
+    "    \"\"\"\n",
+    "    size = tensor.size(dim)\n",
+    "    padding_needed = (multiple - size % multiple) % multiple\n",
+    "    if padding_needed == 0:\n",
+    "        return tensor\n",
+    "    pad_dims = [0] * (2 * tensor.dim())\n",
+    "    pad_dims[-2 * dim - 1] = padding_needed  # padding at the end\n",
+    "    return F.pad(tensor, pad_dims, value=value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([64, 122, 3584])\n"
+      "torch.Size([64, 608, 256])\n"
      ]
     }
    ],
    "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "\n",
-    "def apply_unfolding(transformedNeural, kernelLen=3, strideLen=1):\n",
-    "    \"\"\"\n",
-    "    Applies unfolding operation to transformedNeural.\n",
-    "    \n",
-    "    Args:\n",
-    "        transformedNeural (torch.Tensor): Input tensor of shape (nBatch, SeqLen, NeuralFeats)\n",
-    "        kernelLen (int): Size of the unfolding window\n",
-    "        strideLen (int): Stride of the unfolding operation\n",
-    "    \n",
-    "    Returns:\n",
-    "        torch.Tensor: Strided input tensor of shape (nBatch, new_SeqLen, kernelLen * NeuralFeats)\n",
-    "    \"\"\"\n",
-    "    nBatch, SeqLen, NeuralFeats = transformedNeural.shape\n",
-    "    \n",
-    "    # Unfolding layer\n",
-    "    unfolder = nn.Unfold((kernelLen, 1), dilation=1, padding=0, stride=(strideLen, 1))\n",
-    "    \n",
-    "    # Apply unfolding transformation\n",
-    "    stridedInputs = torch.permute(\n",
-    "        unfolder(\n",
-    "            torch.unsqueeze(torch.permute(transformedNeural, (0, 2, 1)), 3)\n",
-    "        ),\n",
-    "        (0, 2, 1),\n",
-    "    )\n",
-    "    \n",
-    "    return stridedInputs\n",
-    "\n",
-    "# Example usage\n",
-    "transformedNeural = torch.randn(64, 500, 256)  # Example tensor (nBatch=4, SeqLen=100, NeuralFeats=64)\n",
-    "result = apply_unfolding(transformedNeural, kernelLen=14, strideLen=4)\n",
-    "print(result.shape)"
+    "X, y, X_len, y_len, dayIdx = next(iter(trainLoader))\n",
+    "X = pad_to_multiple(X, multiple=32)\n",
+    "print(X.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([ 0.0735,  1.2617,  0.8449,  0.1679, -0.8414, -1.3461, -0.6233,  1.1961,\n",
-       "        -1.4940,  0.7175, -1.8987,  0.7655, -0.0109,  1.5910,  1.2007, -1.0333,\n",
-       "        -0.0179, -1.7113, -0.3060, -0.6826])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "result[0, 0, 0:20]"
+    "bit = BiT(trial_size=(X.shape[1], X.shape[2]), patch_size=(args['patch_height'], args['patch_width']), \n",
+    "    num_classes=args['nClasses'], dim=args['embedding_dim'], depth=args['n_layers'], heads=args['n_heads'], \n",
+    "    mlp_dim_ratio=args['mlp_ratio'], dropout=args['dropout'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "tensor(1.2617)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "76412968\n"
+     ]
     }
    ],
    "source": [
-    "transformedNeural[0, 1, 0]"
+    "pytorch_total_params = sum(p.numel() for p in bit.parameters())\n",
+    "print(pytorch_total_params)"
    ]
   },
   {
@@ -116,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.18"
   },
   "orig_nbformat": 4
  },
