--- a/notebooks/einops.ipynb
+++ b/notebooks/einops.ipynb
@@ -2,44 +2,55 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home2/ebrahim/miniconda3/envs/llm_brain/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "/home2/ebrahim/miniconda3/envs/llm_brain/lib/python3.11/site-packages/transformers/utils/generic.py:441: UserWarning: torch.utils._pytree._register_pytree_node is deprecated. Please use torch.utils._pytree.register_pytree_node instead.\n",
+      "  _torch_pytree._register_pytree_node(\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from einops import rearrange\n",
     "\n",
     "# Example tensor with shape (b=1, c=1, h=2, w=2)\n",
-    "input_tensor = torch.arange(1, 73).reshape(1, 1, 12, 6)\n",
+    "input_tensor = torch.arange(1, (12*8)+1).reshape(1, 1, 12, 8)\n",
     "patch_height = 3\n",
-    "patch_width = 2\n",
+    "patch_width = 4\n",
     "\n",
     "output_tensor = rearrange(input_tensor, 'b c (h p1) (w p2) -> b (h w) (p1 p2 c)', p1=patch_height, p2=patch_width)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[[ 1,  2,  3,  4,  5,  6],\n",
-       "          [ 7,  8,  9, 10, 11, 12],\n",
-       "          [13, 14, 15, 16, 17, 18],\n",
-       "          [19, 20, 21, 22, 23, 24],\n",
-       "          [25, 26, 27, 28, 29, 30],\n",
-       "          [31, 32, 33, 34, 35, 36],\n",
-       "          [37, 38, 39, 40, 41, 42],\n",
-       "          [43, 44, 45, 46, 47, 48],\n",
-       "          [49, 50, 51, 52, 53, 54],\n",
-       "          [55, 56, 57, 58, 59, 60],\n",
-       "          [61, 62, 63, 64, 65, 66],\n",
-       "          [67, 68, 69, 70, 71, 72]]]])"
+       "tensor([[[[ 1,  2,  3,  4,  5,  6,  7,  8],\n",
+       "          [ 9, 10, 11, 12, 13, 14, 15, 16],\n",
+       "          [17, 18, 19, 20, 21, 22, 23, 24],\n",
+       "          [25, 26, 27, 28, 29, 30, 31, 32],\n",
+       "          [33, 34, 35, 36, 37, 38, 39, 40],\n",
+       "          [41, 42, 43, 44, 45, 46, 47, 48],\n",
+       "          [49, 50, 51, 52, 53, 54, 55, 56],\n",
+       "          [57, 58, 59, 60, 61, 62, 63, 64],\n",
+       "          [65, 66, 67, 68, 69, 70, 71, 72],\n",
+       "          [73, 74, 75, 76, 77, 78, 79, 80],\n",
+       "          [81, 82, 83, 84, 85, 86, 87, 88],\n",
+       "          [89, 90, 91, 92, 93, 94, 95, 96]]]])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,27 +61,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[ 1,  2,  7,  8, 13, 14],\n",
-       "         [ 3,  4,  9, 10, 15, 16],\n",
-       "         [ 5,  6, 11, 12, 17, 18],\n",
-       "         [19, 20, 25, 26, 31, 32],\n",
-       "         [21, 22, 27, 28, 33, 34],\n",
-       "         [23, 24, 29, 30, 35, 36],\n",
-       "         [37, 38, 43, 44, 49, 50],\n",
-       "         [39, 40, 45, 46, 51, 52],\n",
-       "         [41, 42, 47, 48, 53, 54],\n",
-       "         [55, 56, 61, 62, 67, 68],\n",
-       "         [57, 58, 63, 64, 69, 70],\n",
-       "         [59, 60, 65, 66, 71, 72]]])"
+       "tensor([[[ 1,  2,  3,  4,  9, 10, 11, 12, 17, 18, 19, 20],\n",
+       "         [ 5,  6,  7,  8, 13, 14, 15, 16, 21, 22, 23, 24],\n",
+       "         [25, 26, 27, 28, 33, 34, 35, 36, 41, 42, 43, 44],\n",
+       "         [29, 30, 31, 32, 37, 38, 39, 40, 45, 46, 47, 48],\n",
+       "         [49, 50, 51, 52, 57, 58, 59, 60, 65, 66, 67, 68],\n",
+       "         [53, 54, 55, 56, 61, 62, 63, 64, 69, 70, 71, 72],\n",
+       "         [73, 74, 75, 76, 81, 82, 83, 84, 89, 90, 91, 92],\n",
+       "         [77, 78, 79, 80, 85, 86, 87, 88, 93, 94, 95, 96]]])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -127,6 +134,8 @@
     "        mask (torch.Tensor): boolean tensor of shape (num_patches, num_patches)\n",
     "                             with True where attention is allowed\n",
     "    \"\"\"\n",
+    "    \n",
+    "    N = num_features / patch_width\n",
     "    assert num_patches % N == 0, \"num_patches must be divisible by N\"\n",
     "    \n",
     "    block_id = torch.arange(num_patches, device=device) // N  # Shape: (num_patches,)\n",
@@ -134,10 +143,17 @@
     "    \n",
     "    return mask  # dtype: bool\n",
     "\n",
-    "mask = make_blockwise_mask(num_patches=9, N=3)\n",
+    "mask = make_blockwise_mask(num_patches=9, num_features=6, patch_width=2)\n",
     "\n",
     "print(mask.int())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
