--- a/notebooks/formatCompetitionData.ipynb
+++ b/notebooks/formatCompetitionData.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "0b6cc836",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "edb2175e",
    "metadata": {},
    "outputs": [],
@@ -62,32 +62,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "e6305c7d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "area_6v_inferior = np.array([\n",
-    "    [125, 126, 112, 103,  31,  28,  11,  8],\n",
-    "    [123, 124, 110, 102,  29,  26,   9,  5],\n",
-    "    [121, 122, 109, 101,  27,  19,  18,  4],\n",
-    "    [119, 120, 108, 100,  25,  15,  12,  6],\n",
-    "    [117, 118, 107,  99,  23,  13,  10,  3],\n",
-    "    [115, 116, 106,  97,  21,  20,   7,  2],\n",
-    "    [113, 114, 105,  98,  17,  24,  14,  0],\n",
-    "    [127, 111, 104,  96,  30,  22,  16,  1]\n",
-    "]).ravel()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "20398fe1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import scipy\n",
-    "\n",
     "def reorder_electrode_idxs(feats):\n",
     "    \n",
     "    area_6v_superior = np.array([\n",
@@ -128,7 +107,85 @@
     "    feats_reshaped[:, 128:] = feats[:, superior_combined_array.ravel()]\n",
     "    \n",
     "    return feats_reshaped\n",
-    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "24a14e46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 1, 32, 256])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([126, 254, 126, 254, 126, 254, 126, 254, 126, 254, 126, 254, 126, 254,\n",
+       "        126, 254, 126, 254, 126, 254, 126, 254, 126, 254, 126, 254, 126, 254,\n",
+       "        126, 254, 126, 254, 126, 254, 126, 254, 126, 254, 126, 254, 126, 254,\n",
+       "        126, 254, 126, 254, 126, 254, 126, 254, 126, 254, 126, 254, 126, 254,\n",
+       "        126, 254, 126, 254, 126, 254, 126, 254])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "x = np.expand_dims(np.arange(256),axis=0)\n",
+    "x_reordered = np.expand_dims(reorder_electrode_idxs(x), axis=0)\n",
+    "x_reordered = torch.asarray(np.tile(x_reordered, (1, 1, 32, 1)) )\n",
+    "print(x_reordered.shape)\n",
+    "\n",
+    "from einops.layers.torch import Rearrange\n",
+    "from einops.layers.torch import Rearrange\n",
+    "patch_height = 32\n",
+    "patch_width = 2\n",
+    "rearrange_layer = Rearrange('b c (h p1) (w p2) -> b (h w) (p1 p2 c)', p1=patch_height, p2=patch_width)\n",
+    "\n",
+    "x_einsum = rearrange_layer(x_reordered)\n",
+    "x_einsum[0, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "b4bfc32a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "253"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "125 + 128"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "20398fe1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy\n",
+    "\n",
+    "\n",
     "\n",
     "def loadFeaturesAndNormalize(sessionPath, logPower=True, logBoth=True):\n",
     "    \n",
@@ -194,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "1cf55fa2",
    "metadata": {},
    "outputs": [],
