--- a/notebooks/einops.ipynb
+++ b/notebooks/einops.ipynb
@@ -9,10 +9,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home2/ebrahim/miniconda3/envs/llm_brain/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "/home2/ebrahim/miniconda3/envs/llm_brain/lib/python3.11/site-packages/transformers/utils/generic.py:441: UserWarning: torch.utils._pytree._register_pytree_node is deprecated. Please use torch.utils._pytree.register_pytree_node instead.\n",
-      "  _torch_pytree._register_pytree_node(\n"
+      "/home3/ebrahim/miniconda3/envs/speech-bci/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
@@ -30,60 +28,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[[[ 1,  2,  3,  4,  5,  6,  7,  8],\n",
-       "          [ 9, 10, 11, 12, 13, 14, 15, 16],\n",
-       "          [17, 18, 19, 20, 21, 22, 23, 24],\n",
-       "          [25, 26, 27, 28, 29, 30, 31, 32],\n",
-       "          [33, 34, 35, 36, 37, 38, 39, 40],\n",
-       "          [41, 42, 43, 44, 45, 46, 47, 48],\n",
-       "          [49, 50, 51, 52, 53, 54, 55, 56],\n",
-       "          [57, 58, 59, 60, 61, 62, 63, 64],\n",
-       "          [65, 66, 67, 68, 69, 70, 71, 72],\n",
-       "          [73, 74, 75, 76, 77, 78, 79, 80],\n",
-       "          [81, 82, 83, 84, 85, 86, 87, 88],\n",
-       "          [89, 90, 91, 92, 93, 94, 95, 96]]]])"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "input_tensor"
+    "def sliding_chunks(x, chunk_size=32, stride=4):\n",
+    "    \"\"\"\n",
+    "    x: Tensor of shape (B, T, C)\n",
+    "    Returns: Tensor of shape (B, M, chunk_size, C)\n",
+    "    \"\"\"\n",
+    "    B, T, C = x.shape\n",
+    "\n",
+    "    # Unfold the time dimension (dim=1) using torch.nn.functional.unfold logic\n",
+    "    x = x.unfold(dimension=1, size=chunk_size, step=stride)  # (B, M, chunk_size, C)\n",
+    "    return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input:\n",
+      "tensor([[ 0.,  1.,  2.,  3.,  4.,  5.,  6.,  7.,  8.,  9., 10., 11.]])\n",
+      "\n",
+      "Sliding chunks (B x M x chunk_size x C):\n",
+      "tensor([[[ 0.,  1.,  2.,  3.]],\n",
+      "\n",
+      "        [[ 2.,  3.,  4.,  5.]],\n",
+      "\n",
+      "        [[ 4.,  5.,  6.,  7.]],\n",
+      "\n",
+      "        [[ 6.,  7.,  8.,  9.]],\n",
+      "\n",
+      "        [[ 8.,  9., 10., 11.]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# B=1, T=12, C=1 -> we’ll fill time dimension with ascending numbers\n",
+    "T = 12\n",
+    "x = torch.arange(T).view(1, T, 1).float()\n",
+    "\n",
+    "# Apply sliding\n",
+    "chunks = sliding_chunks(x, chunk_size=4, stride=2)\n",
+    "\n",
+    "print(\"Input:\")\n",
+    "print(x.squeeze(-1))  # just to see time steps clearly\n",
+    "\n",
+    "print(\"\\nSliding chunks (B x M x chunk_size x C):\")\n",
+    "print(chunks.squeeze(0).squeeze(-1))  # Remove batch and channel dims for display"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[ 1,  2,  3,  4,  9, 10, 11, 12, 17, 18, 19, 20],\n",
-       "         [ 5,  6,  7,  8, 13, 14, 15, 16, 21, 22, 23, 24],\n",
-       "         [25, 26, 27, 28, 33, 34, 35, 36, 41, 42, 43, 44],\n",
-       "         [29, 30, 31, 32, 37, 38, 39, 40, 45, 46, 47, 48],\n",
-       "         [49, 50, 51, 52, 57, 58, 59, 60, 65, 66, 67, 68],\n",
-       "         [53, 54, 55, 56, 61, 62, 63, 64, 69, 70, 71, 72],\n",
-       "         [73, 74, 75, 76, 81, 82, 83, 84, 89, 90, 91, 92],\n",
-       "         [77, 78, 79, 80, 85, 86, 87, 88, 93, 94, 95, 96]]])"
+       "25.0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "output_tensor"
+    "100/4"
    ]
   },
   {
@@ -172,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.18"
   },
   "orig_nbformat": 4
  },
