Fixed causal mask

--- a/notebooks/making_masks.ipynb
+++ b/notebooks/making_masks.ipynb
@@ -2,46 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "def create_temporal_mask(seq_len, look_ahead=0, device=None):\n",
+    "    \"\"\"\n",
+    "    Create a temporal attention mask where each position i can attend to:\n",
+    "    positions [0, ..., i + look_ahead], up to seq_len - 1\n",
+    "\n",
+    "    Returns: (1, 1, seq_len, seq_len) boolean tensor\n",
+    "    \"\"\"\n",
+    "    i = torch.arange(seq_len, device=device).unsqueeze(1)  # query positions\n",
+    "    j = torch.arange(seq_len, device=device).unsqueeze(0)  # key positions\n",
+    "\n",
+    "    mask = j <= i + look_ahead  # allow attention to past and limited future\n",
+    "    return mask.unsqueeze(0).unsqueeze(0)  # shape: (1, 1, seq_len, seq_len)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1 1 1 ... 0 0 0]\n",
-      " [1 1 1 ... 0 0 0]\n",
-      " [1 1 1 ... 0 0 0]\n",
-      " ...\n",
-      " [1 1 1 ... 1 1 1]\n",
-      " [1 1 1 ... 1 1 1]\n",
-      " [1 1 1 ... 1 1 1]]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "tensor([[[[ True,  True, False, False, False, False, False, False, False, False],\n",
+       "          [ True,  True,  True, False, False, False, False, False, False, False],\n",
+       "          [ True,  True,  True,  True, False, False, False, False, False, False],\n",
+       "          [ True,  True,  True,  True,  True, False, False, False, False, False],\n",
+       "          [ True,  True,  True,  True,  True,  True, False, False, False, False],\n",
+       "          [ True,  True,  True,  True,  True,  True,  True, False, False, False],\n",
+       "          [ True,  True,  True,  True,  True,  True,  True,  True, False, False],\n",
+       "          [ True,  True,  True,  True,  True,  True,  True,  True,  True, False],\n",
+       "          [ True,  True,  True,  True,  True,  True,  True,  True,  True,  True],\n",
+       "          [ True,  True,  True,  True,  True,  True,  True,  True,  True,  True]]]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import torch\n",
-    "\n",
-    "def create_temporal_attention_mask(num_patches, patches_per_timestep, N):\n",
-    "    mask = torch.full((num_patches, num_patches), 0)\n",
-    "\n",
-    "    timesteps = num_patches // patches_per_timestep\n",
-    "    for t_q in range(timesteps):  # time index of query\n",
-    "        for dt in range(N + 1):  # how far back to look\n",
-    "            t_k = t_q - dt  # key timestep\n",
-    "            if t_k < 0:\n",
-    "                continue\n",
-    "            q_start = t_q * patches_per_timestep\n",
-    "            q_end = (t_q + 1) * patches_per_timestep\n",
-    "            k_start = t_k * patches_per_timestep\n",
-    "            k_end = (t_k + 1) * patches_per_timestep\n",
-    "            # allow attention: set to 0 (non-masked)\n",
-    "            mask[q_start:q_end, k_start:k_end] = 1\n",
-    "\n",
-    "    return mask  # shape: [Num Patches, Num Patches]\n",
-    "\n",
-    "mask = create_temporal_attention_mask(20, 5, 2)\n",
-    "print(mask.numpy())"
+    "create_temporal_mask(10)"
    ]
   },
   {
